prevent line-breaks in TOC entries

--- a/extra/resources/coqdoc.css
+++ b/extra/resources/coqdoc.css
@@ -180,6 +180,7 @@ tr.infrulemiddle hr {
 ul.doclist {
     margin-top: 0em;
     margin-bottom: 0em;
+    white-space:nowrap;
 }
 
 #toc > * {
